--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
     "@mui/icons-material": "^5.11.0",
     "axios": "^1.2.3",
     "bootstrap": "^5.3.0-alpha1",
+    "bootstrap-datepicker": "^1.9.0",
     "bootstrap-icons": "^1.10.3",
     "cors": "^2.8.5",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.7.0"
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
